django_react_project/frontend/src/style.css
/* ... */
/***********************************   EXPERIENCE PAGE STYLES    ***********************************/
.construction-message {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 0 auto;
}

/* SVG container with responsive sizing */
.svg-container {
  width: 80px;
  height: 80px;
  background: linear-gradient(160deg, #ff6b6b, #f94d6a, #5630a3, #f94d6a, #ff6b6b);
  background-size: 300% 300%;
  animation: background-pan 10s infinite linear;
  -webkit-mask-image: url('./images/under-construction.svg');
  mask-image: url('./images/under-construction.svg');
  -webkit-mask-size: contain;
  mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

/* Media query for larger screens */
@media (min-width: 768px) {
  .svg-container {
    width: 120px;
    height: 120px;
  }
}

@media (min-width: 1024px) {
  .svg-container {
    width: 150px;
    height: 150px;
  }
}

.construction-message p {
  font-size: 1.2em;
  margin-top: 20px;
  color: #fff;
}

.construction-message a {
  color: #ff6b6b;
  text-decoration: none;
  transition: color 0.3s;
}

.construction-message a:hover {
  color: #f94d6a;
}

/***********************************   PROJECT PAGE STYLES    ***********************************/
.projects-grid {
  display: grid;
  grid-template-columns: 1fr;
  gap: 20px;
}

.project-card {
  align-items: center;
  position: relative;
  background: #000000;
  color: #fff;
  cursor: pointer;
  padding: 15px;
  border-radius: 5px;
  overflow: hidden;
  height: auto;
  transition: all 0.3s ease;
  border: 3px solid rgb(65, 65, 65);
  max-width: 600px;
  
}

.project-preview {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.project-info {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.completed-date {
  font-size: 0.9em;
  color: #cccccc;
}

.preview-image {
  width: 200px;
  height: 120px;
  object-fit: contain;
  border-radius: 5px;
}

/* Expanded Content */
.expanded-content {
  margin-top: 10px;
  padding-bottom: 25px;
  height: auto;
}

.title-container {
  align-items: center;
  width: 100%;
  position: relative;
}

.repo-link {
  font-size: smaller;
  padding: 10px 20px;
}

.project-description {
  border: 3px solid rgb(65, 65, 65);
  border-radius: 12px;
  padding: 10px;
  margin: 20px 0;
  font-size: 14px;
}

.technologies-container {
  display: flex;
  overflow-x: auto;
  white-space: nowrap;
  padding-bottom: 10px;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
}

.technologies-row {
  display: inline-flex;
  gap: 10px;
  margin: 0 auto;
}

.technologies-container::-webkit-scrollbar {
  height: 8px;
}

.technologies-container::-webkit-scrollbar-thumb {
  background-color: #888;
  border-radius: 10px;
}

.technologies-container::-webkit-scrollbar-thumb:hover {
  background-color: #555;
}

.tech-icon-wrapper {
  display: inline-block;
  padding: 10px;
  position: relative;
  text-align: center;
  flex-shrink: 0;
}

.tech-icon {
  width: 40px;
  height: 40px;
}

.tooltip {
  position: absolute;
  bottom: -10px;
  left: 50%;
  transform: translateX(-50%);
  background: rgba(0, 0, 0, 0.75);
  color: white;
  padding: 4px 8px;
  border-radius: 4px;
  display: none;
  white-space: nowrap;
  z-index: 10000;
}

.tech-icon-wrapper:hover .tooltip {
  display: block;
}

/* Slick-carousel styles */
.image-carousel {
  padding-top: 10px;
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
}

.carousel-image {
  width: 100%;
  height: auto;
  object-fit: contain;
  border-radius: 5px;
}

.slick-prev,
.slick-next {
  width: 40px;
  height: 40px;
  z-index: 1000;
}

.slick-prev {
  left: 10px !important;
}

.slick-next {
  right: 10px !important;
}

/* Default dot color */
.slick-dots li button::before {
  color: #ffffff !important;
  opacity: 0.5;
  font-size: 12px;
}

/* Active dot color */
.slick-dots .slick-active button::before {
  color: #fff !important;
  opacity: 1;
}

.completed-expanded {
  margin-top: 30px;
}

/* Responsive Styles */
@media (min-width: 768px) {

  .projects-grid {
    margin-top: 40px;
  }
  
  .project-card {
    min-width: 70%;
    margin: 0 auto;
  }

  .project-info {
    font-size: 1.2rem;
  }

  .project-description {
   font-size: 15px;
  }

  .image-carousel {
    max-width: 80%;
    margin: 0 auto;
  }

  .project-card:hover {
    opacity: 1;
  }
}

/***********************************   SKILLS PAGE STYLES    ***********************************/
.skills-page {
  padding: 20px;
}

.skills-page h2 {
  text-align: center;
  color: #fff;
}

.skills-columns {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}


.skills-column {
  flex: 1 1 100%;
  margin: 20px;
  text-align: center;
}

.category-title {
  position: relative;
  display: inline-block;
  color: #fff;
  margin-bottom: 20px;
  font-size: 1.5rem;
  text-align: center;
}

.category-title::after {
  content: '';
  position: absolute;
  left: 0;
  bottom: -5px;
  width: 100%;
  height: 4px;
  background: linear-gradient(160deg,
      #ff6b6b 0%,
      #f94d6a 25%,
      #5630a3 50%,
      #f94d6a 75%,
      #ff6b6b 100%);
  background-size: 300% 300%;
  animation: background-pan 70s infinite linear;
}

.skills-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
}

.skill-item {
  width: 80px;
  margin: 10px;
  text-align: center;
  color: #fff;
  position: relative;
}

.skill-chart-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  margin: 0 auto;
}

.skill-icon-overlay {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 50%;
  height: 50%;
  transform: translate(-50%, -50%);
}

.skill-name {
  margin-top: 10px;
  font-size: 1rem;
}

/* Larger Screens */
@media (min-width: 576px) {
  .skill-item {
      width: 100px;
      margin: 15px;
  }

  .skill-name {
      font-size: 1.1rem;
  }
}
/* ... */

